add type input value

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </label>
         <label for="">
             Valor
-            <input class="input-currency" placeholder="R$">
+            <input class="input-currency" placeholder="R$" type="number">
         </label>
 
         <button class="convertButton">Converter</button>
